--- a/aim/web/ui/src/pages/RunDetail/RunDetail.scss
+++ b/aim/web/ui/src/pages/RunDetail/RunDetail.scss
@@ -12,6 +12,14 @@
       .MuiTabs-fixed {
         overflow: auto !important;
       }
+      .MuiTabs-scroller {
+        --ms-overflow-style: none;
+        --scrollbar-width: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
       .MuiTabs-indicator {
         display: none;
       }
@@ -74,11 +82,10 @@
     }
 
     &__tabsContainer {
-      border-bottom: $border-grey-lighter;
       background: #ffffff;
       box-shadow: 0 toRem(4px) toRem(6px) rgba(144, 175, 218, 0.2);
-      border-bottom: 0.0625rem solid $cuddle;
-      border-top: 0.0625rem solid $cuddle;
+      border-bottom: $border-grey-lighter;
+      border-top: $border-grey-lighter;
       .PrivateTabIndicator-root-1 {
         display: none;
       }
